<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Contacts Manager</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    
	<string name="name">Name</string>
	<string name="phoneNumber">Phone Number</string>
	<string name="email">Email</string>
	<string name="address">Address</string>
	<string name="show">Show Additional Fields</string>
	<string name="hide">Hide Additional Fields</string>
	<string name="position">Position</string>
	<string name="company">Company</string>
	<string name="messengerID">Messenger ID</string>
	<string name="website">Website</string>
	<string name="save">Save</string>
	<string name="cancel">Cancel</string>
</resources>
