<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="ro.pub.cs.systems.pdsd.lab04.contactsmanager.ContactsManagerActivity" >

    <!-- xmlns:android="http://schemas.android.com/apk/res/android" -->

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:paddingLeft="16dp"
        android:paddingRight="16dp" >

        <EditText
            android:id="@+id/name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/name" />

        <EditText
            android:id="@+id/phoneNumber"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:enabled="false"
            android:hint="@string/phoneNumber" />

        <EditText
            android:id="@+id/email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/email" />

        <EditText
            android:id="@+id/address"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/address" />

        <Button
            android:id="@+id/save"
            android:layout_width="250dp"
            android:layout_height="32dp"
            android:layout_gravity="right"
            android:text="@string/save" />

        <Button
            android:id="@+id/show"
            android:layout_width="250dp"
            android:layout_height="28dp"
            android:layout_gravity="right"
            android:text="@string/show" />

        <Button
            android:id="@+id/cancel"
            android:layout_width="250dp"
            android:layout_height="26dp"
            android:layout_gravity="right"
            android:layout_weight="0.00"
            android:text="@string/cancel" />

        <LinearLayout
            android:id="@+id/layout2"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:paddingLeft="16dp"
            android:paddingRight="16dp"
            android:visibility="gone" >

            <EditText
                android:id="@+id/position"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/position" />

            <EditText
                android:id="@+id/company"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/company" />

            <EditText
                android:id="@+id/website"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/website" />

            <EditText
                android:id="@+id/messengerID"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/messengerID" />
        </LinearLayout>
    </LinearLayout>

</RelativeLayout>